Fix remaining alignment issues, remove sm size buttons

--- a/client/styles/components/proposals/voting_results.scss
+++ b/client/styles/components/proposals/voting_results.scss
@@ -11,7 +11,7 @@
         display: flex;
         flex-direction: column;
         flex: 1;
-        padding: 18px 26px 20px;
+        padding: 18px 26px 12px;
         min-width: 50%;
         .results-header {
             font-weight: 500;
